--- a/hotpotato/Cargo.toml
+++ b/hotpotato/Cargo.toml
@@ -5,11 +5,12 @@ authors = ["[your_name] <[your_email]>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "4.3.0", default-features = false }
-openbrush = { version = "4.0.0-beta", default-features = false, features = ["psp34"] }
+ink = { version = "6.0.0-alpha", default-features = false }
+scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
+scale-info = { version = "2.6", default-features = false, features = ["derive"] }
 
 [dev-dependencies]
-ink_e2e = "4.3.0"
+ink_e2e = "6.0.0-alpha"
 
 [lib]
 path = "lib.rs"
@@ -18,7 +19,8 @@ path = "lib.rs"
 default = ["std"]
 std = [
     "ink/std",
-    "openbrush/std",
+    "scale/std",
+    "scale-info/std",
 ]
 ink-as-dependency = []
 e2e-tests = []
